# LokaBhasha

./: README.md  pyproject.toml
lokabhasha/: main.py
lokabhasha-backend/: .env.template  .gitignore  README.md  pyproject.toml
lokabhasha-backend/backend/: main.py
lokabhasha-backend/backend/crud/: answers.py  apis.py  language.py  module.py  question.py  resources.py  responses.py  user.py
lokabhasha-backend/backend/models/: answers.py  apis.py  language.py  module.py  question.py  resources.py  responses.py  user.py
lokabhasha-backend/backend/routers/: ai.py  analytics.py  answers.py  apis.py  auth.py  language.py  module.py  question.py  resources.py  responses.py  user.py
lokabhasha-backend/backend/schemas/: ai.py  analytics.py  answers.py  apis.py  language.py  module.py  question.py  resources.py  responses.py  user.py
lokabhasha-backend/backend/utils/: data.sql  database.py  functionalities.sql  init.sql  models.py  test_init.sql
lokabhasha-backend/tests/: test_language.py  test_main.py
lokabhasha-frontend/: package-lock.json  package.json
lokabhasha-frontend/app/: layout.tsx  page.tsx
lokabhasha-frontend/app/account/[userId]/: page.tsx
lokabhasha-frontend/app/admin/apis/: page.tsx
lokabhasha-frontend/app/admin/dashboard/: page.tsx
lokabhasha-frontend/app/admin/login/: page.tsx
lokabhasha-frontend/app/contexts/: auth-context.tsx
lokabhasha-frontend/app/dashboard/: page.tsx
lokabhasha-frontend/app/login/: page.tsx
lokabhasha-frontend/app/signup/: page.tsx
lokabhasha-frontend/components/: spinner.tsx
lokabhasha/utils/: init.sql
(+5 files in other folders)
